--- a/exercise/package.json
+++ b/exercise/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular-seed",
+  "name": "exercise",
   "private": true,
   "version": "0.0.0",
   "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
+  "repository": "https://github.com",
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
@@ -16,7 +16,9 @@
     "karma-jasmine": "^0.3.5",
     "karma-junit-reporter": "^0.2.2",
     "protractor": "^2.1.0",
-    "shelljs": "^0.2.6"
+    "shelljs": "^0.2.6",
+    "istanbul": "^0.4.3",
+    "karma-coverage": "^0.5.5"
   },
   "scripts": {
     "postinstall": "bower install",
